# GRPC_Learn

./: README.md  build.sbt
project/: plugins.sbt
src/: simple_rpc.proto
src/main/cpp/: CMakeLists.txt  README.md  simple_client.cpp  simple_server.cpp
src/main/java/test/rpc/protobuff/: AddressBookProtos.java
src/main/scala/client/: SimpleServiceClient.scala
src/main/scala/server/: SimpleServer.scala
src/main/scala/test/rpc/grpc/: ProtoBufferTest.scala
